--- a/config-client-dev.properties
+++ b/config-client-dev.properties
@@ -1,6 +1,4 @@
-server.port=4040
-spring.application.name=food-service
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.healthcheck.enabled=true
-eureka.client.register-with-eureka=true
-logging.level.com.com.example.demo=DEBUG
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test
+spring.datasource.data-username=root
+spring.datasource.data-password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
