--- a/config-client-dev.properties
+++ b/config-client-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.data-username=root
 spring.datasource.data-password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
